change server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8282
+server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:postgresql://ec2-23-21-246-11.compute-1.amazonaws.com:5432/d4sec5uel9orth?sslmode=require
 spring.datasource.username=gkwyvyloqvdbpt
